# py_geo_analysis_crashcourse

./: LICENSE  Python for Geographic Data Analysis.qmd  Python_for_Geoanalysis.ipynb  _quarto.yml  pyproject.toml  references.bib
.devcontainer/: devcontainer.json
_output/: Python for Geographic Data Analysis.html
