[project]
name = "py-geo-analysis-crashcourse"
version = "0.1.0"
description = ""
authors = [
    {name = "b.balzano@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
