[project]
name = "py-geo-analysis-crashcourse"
version = "0.1.0"
description = ""
authors = [
    {name = "b.balzano@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "geopandas (>=1.1.2,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "mapclassify (>=2.10.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
